Restart landing page from HTML only
Restarted the coding process of the landing page
by doing most of the HTML first and slowly
applying styling later, first attempt was not
very organized and resulted in too much
confusion in the CSS.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <body>
 
+    <div class="hero">
      <div class="header">
         <h1 class="logo">Header Logo</h1>
         <ul class="headerlinks">
@@ -18,29 +19,46 @@
             <a href="#"><li>header link two</li></a>
             <a href="#"><li>header link three</li></a>
         </ul>
-     </div>
-
-     <div class="hero">
-        This website is awesome
-     </div>
+        </div>
+        <div class="herocontainer">This website is awesome
+        <p class="herotext">This is some subtext that goes under the main hero text, it is smaller and slightly darker color</p>
+        <button>Sign Up</button>
+        </div>
+      </div>
 
      <div class="info">
-        Random information goes here
+        <div class="infotitle">Random information goes here</div>
+         <div class="infoimage">
+            <img src="images/charles.jpg" alt="a black pug">
+            <div class="infotext">Random information under a placeholder image</div>
+         </div>
+         <div class="infoimage">
+            <img src="images/charles.jpg" alt="a black pug">
+            <div class="infotext">Random information under a placeholder image</div>
+         </div>
+         <div class="infoimage">
+            <img src="images/charles.jpg" alt="a black pug">
+            <div class="infotext">Random information under a placeholder image</div>
+         </div>
+         <div class="infoimage">
+            <img src="images/charles.jpg" alt="a black pug">
+            <div class="infotext">Random information under a placeholder image</div>
+         </div>
      </div>
 
      <div class="quote">
-        Random quote goes here
+        <p><em>"The one absolutely unselfish friend that man can have in this selfish world, the one that never deserts him, the one that never proves ungrateful or treacherous, is his dog."</em></p>
      </div>
 
-     <div class="signup">
-        Big sign up button goes here
+     <div class="calltoaction">
+        <div class="calltoaction container">Call to action container goes here! Click the sign up button to join now!
+         <button>Sign Up</button>
+        </div>
      </div>
     
      <footer class="footer">
         Copyright @ The Odin Project 2021
      </footer>
-
-
-
+     
     </body>
 </html>
